tests/characterization/snapshots/bash_external_calls__backend_versions.snap
---
source: tests/characterization/versions.rs
expression: "normalize(&context.fake_tools.log(), context.root())"
---
{"tool":"curl","ordinal":1,"argv":["curl","-fsSL","https://github.com/oqtopus-team/oqtopus-engine.git/info/refs?service=git-upload-pack","-o","<TEST_ROOT>/tmp/<TEMP_DIR>"],"cwd":"<TEST_ROOT>/work","env":{"HOME":"<TEST_ROOT>/home","XDG_CONFIG_HOME":"<TEST_ROOT>/xdg-config","XDG_DATA_HOME":"<TEST_ROOT>/xdg-data","OQTOPUS_CLI_VERSION":"9.8.7-characterization"}}
